# API_assicnrona_python

./: .gitignore  README.md
fastapi-crud/: README.md  docker-compose.yml  gitignore  pyproject.toml
fastapi-crud/init-scripts/: init.sql
fastapi-crud/src/: Dockerfile  requirements.txt
fastapi-crud/src/app/: main.py
fastapi-crud/src/app/api/: source.py
fastapi-crud/src/app/models/: pedido_model.py
fastapi-crud/src/app/sql/: db.py
fastapi-crud/src/app/utils/: generate_token.py
fastapi-crud/src/tests/: test_source.py
fastapi-tdd-docker/: README.md  docker-compose.yml  dockerInstall.sh
fastapi-tdd-docker/project/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
fastapi-tdd-docker/project/app/: config.py  main.py
