[tool.poetry]
name = "api-assincrona"
version = "0.1.0"
description = ""
authors = ["lucas <lucas.lrodrigues@sptech.school>"]
readme = "README.md"
packages = [{include = "api_assincrona"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
